# domian-LLM

./: .gitignore  README.md
api/: README.md  alembic.ini  project_structure  pyproject.toml  requirements.txt
api/alembic/: env.py
api/config/: config.yaml  services.yaml
api/migrations/: env.py
api/migrations/versions/: 36a3efd1d094_add_service_endpoints.py
api/scripts/: demo.py  download_models.py  run_mock_servers.py  start_services.sh
api/src/: main.py
api/src/adapter/: adapter_manager.py
api/src/api/models/: request_models.py
api/src/api/routes/: domain_config.py  domain_operations.py  llm.py  llm_execution.py  service_registry.py  signal_processing.py
api/src/connectors/: base_connector.py
api/src/connectors/matlab/: matlab_client.py  matlab_connector.py
api/src/core/: domain_manager.py  llm_manager.py
api/src/core/config/: models.py  service_config.py  settings.py
api/src/core/context/: context_manager.py
api/src/core/db/: config.py  domain_db.py
api/src/core/domains/: base_domain.py  signal_processing.py
api/src/core/execution/: executor.py  models.py
api/src/core/intent/: intent_analyzer.py
api/src/core/prompt/: prompt_manager.py
api/src/core/providers/: base_provider.py  ollama_provider.py  openai_provider.py
api/src/core/rag/: document_store.py  faiss_document_store.py  rag_manager.py  utils.py
api/src/core/services/: llm_executor.py  plan_executor.py
api/src/interface/: cli.py
api/src/mock_servers/matlab/: server.py
api/src/models/: domain_models.py
api/tests/: README.md  conftest.py  run_execution_tests.sh  run_llm_execution_test.sh  run_tests.py  test_api.sh  test_cases.md  test_execution.py  test_llm_execution.py  test_llm_execution.sh  test_llm_execution_flow.py
api/tests/test_cases/chat/: test_cases.md
api/tests/test_cases/mock_server/: test_cases.md
api/tests/test_cases/service_registry/: test_api.sh  (+1 more)
mock_servers/: README.md  pyproject.toml  run.py  start_servers.sh
mock_servers/src/matlab/: server.py
mock_servers/tests/: list_signal_services.sh  run_tests.sh  test_filters.sh  test_matlab_server.py
(+3 files in other folders)
