[tool.poetry]
name = "mock-servers"
version = "0.1.0"
description = "Mock servers for scientific software"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = ">=0.100.0"
uvicorn = "^0.27.0"
numpy = "^1.24.0"
pydantic = ">=2.0.0"
scipy = "^1.12.0"
aiohttp = "^3.9.0"
python-multipart = "^0.0.9"

pytest = "^8.3.4"
requests = "^2.32.3"
httpx = "^0.28.1"
starlette = ">=0.27.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-servers = "run:main" 